--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -731,7 +731,7 @@ paths:
       summary: Get all flights
       description: Gets a list of all flights available in the database.
       responses:
-        '200':
+        "200":
           description: Successfully Get all flights
           content:
             application/json:
@@ -747,7 +747,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/BasicFlightInfo'
+                      $ref: "#/components/schemas/BasicFlightInfo"
 
   /ticket/flight/{flightId}:
     get:
@@ -763,13 +763,13 @@ paths:
             type: integer
           description: The ID of the flight to retrieve
       responses:
-        '200':
+        "200":
           description: Flight details retrieved successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedFlightInfo'
-        '404':
+                $ref: "#/components/schemas/DetailedFlightInfo"
+        "404":
           description: Flight not found
           content:
             application/json:
@@ -782,6 +782,92 @@ paths:
                   message:
                     type: string
                     example: "Flight not found"
+  /ticket/schedule/recomendation:
+    get:
+      tags:
+        - "Ticket"
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "All flights retrieved successfully"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        detail_flight_id:
+                          type: integer
+                          example: 3
+                        order_count:
+                          type: integer
+                          example: 7
+                        detail:
+                          type: object
+                          properties:
+                            detailPlaneId:
+                              type: object
+                              properties:
+                                plane:
+                                  type: object
+                                  properties:
+                                    name:
+                                      type: string
+                                      example: "Boeing 737-800"
+                            flight:
+                              type: object
+                              properties:
+                                city_arrive:
+                                  type: object
+                                  properties:
+                                    id:
+                                      type: integer
+                                      example: 1
+                                    name:
+                                      type: string
+                                      example: "Tangerang"
+                                    code:
+                                      type: string
+                                      example: "CGK"
+                                    airport_name:
+                                      type: string
+                                      example: "Bandara Internasional Soekarno-Hatta"
+                                    country_id:
+                                      type: integer
+                                      example: 1
+                                city_destination:
+                                  type: object
+                                  properties:
+                                    id:
+                                      type: integer
+                                      example: 2
+                                    name:
+                                      type: string
+                                      example: "Denpasar"
+                                    code:
+                                      type: string
+                                      example: "DPS"
+                                    airport_name:
+                                      type: string
+                                      example: "Bandara Internasional Ngurah Rai"
+                                    country_id:
+                                      type: integer
+                                      example: 1
+                                estimation_minute:
+                                  type: integer
+                                  example: 240
+                            price:
+                              type: integer
+                              example: 1500000
 
   /planes:
     get:
@@ -790,7 +876,7 @@ paths:
       summary: Get all planes
       description: Get a list of all planes available in the database.
       responses:
-        '200':
+        "200":
           description: All planes Get successfully
           content:
             application/json:
@@ -841,7 +927,7 @@ paths:
             type: integer
           description: The ID of the plane to retrieve
       responses:
-        '200':
+        "200":
           description: Plane details retrieved successfully
           content:
             application/json:
@@ -901,7 +987,7 @@ paths:
                                 type_class:
                                   type: string
                                   example: "Ekonomi"
-        '404':
+        "404":
           description: Plane not found
           content:
             application/json:
@@ -1010,14 +1096,14 @@ paths:
             type: integer
           description: The ID of the flight detail for which the order is being created
       requestBody:
-        $ref: '#/components/requestBodies/orderRequest'
+        $ref: "#/components/requestBodies/orderRequest"
       responses:
         201:
           description: Order created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/OrderResponse'
+                $ref: "#/components/schemas/OrderResponse"
         400:
           description: Bad request, missing or invalid fields
           content:
@@ -1050,7 +1136,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/OrderResponse'
+                  $ref: "#/components/schemas/OrderResponse"
       security:
         - bearerAuth: []
 
@@ -1073,7 +1159,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/OrderResponse'
+                $ref: "#/components/schemas/OrderResponse"
         404:
           description: Order not found
           content:
@@ -1091,7 +1177,7 @@ paths:
                     example: ~
       security:
         - bearerAuth: []
-            
+
   /notifications:
     get:
       tags:
@@ -1172,7 +1258,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Notification'
+                      $ref: "#/components/schemas/Notification"
         400:
           description: Bad request, missing required fields
           content:
@@ -1350,13 +1436,13 @@ components:
 
     DetailedFlightInfo:
       allOf:
-        - $ref: '#/components/schemas/BasicFlightInfo'
+        - $ref: "#/components/schemas/BasicFlightInfo"
         - type: object
           properties:
             city_arrive:
-              $ref: '#/components/schemas/City'
+              $ref: "#/components/schemas/City"
             city_destination:
-              $ref: '#/components/schemas/City'
+              $ref: "#/components/schemas/City"
 
     DetailFlight:
       type: object
@@ -1448,13 +1534,13 @@ components:
           type: integer
           example: 1
         user:
-          $ref: '#/components/schemas/UserResponse'
+          $ref: "#/components/schemas/UserResponse"
         detailFlight:
-          $ref: '#/components/schemas/FlightSchedule'
+          $ref: "#/components/schemas/FlightSchedule"
         passengers:
           type: array
           items:
-            $ref: '#/components/schemas/Passenger'
+            $ref: "#/components/schemas/Passenger"
         status:
           type: string
           example: unpaid
@@ -1499,7 +1585,7 @@ components:
               passengers:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Passenger'
+                  $ref: "#/components/schemas/Passenger"
     createLogin:
       content:
         application/json:
