--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -1016,6 +1016,7 @@ paths:
           name: find
           schema:
             type: string
+          description: Input name of the city
       responses:
         "200":
           description: Success
@@ -1061,6 +1062,7 @@ paths:
           name: find
           schema:
             type: string
+          description: Input name of the country
       responses:
         "200":
           description: Success
@@ -1103,6 +1105,7 @@ paths:
           name: find
           schema:
             type: string
+          description: Input name of the continent
       responses:
         "200":
           description: Success
@@ -1355,6 +1358,120 @@ paths:
                         example: 2
       security:
         - bearerAuth: []
+ 
+  /payment/{orderId}:
+    post:
+      tags:
+        - "Payment"
+      summary: Create a payment for an order
+      description: Creates a payment record for an order and updates the order status to 'PAID'.
+      parameters:
+        - in: path
+          name: orderId
+          required: true
+          schema:
+            type: integer
+          description: The ID of the order for which the payment is being made
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                method_payment:
+                  type: string
+                  example: "credit_card"
+      responses:
+        201:
+          description: Payment created and order updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentResponse'
+        400:
+          description: Bad request, missing or invalid fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Payment method is required"
+        404:
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Order not found"
+      security:
+        - bearerAuth: []
+
+  /payments:
+    get:
+      tags:
+        - "Payment"
+      summary: Retrieve all payments
+      description: Retrieves a list of all payments made by authenticated users.
+      responses:
+        200:
+          description: Successfully retrieved all payments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PaymentResponse'
+      security:
+        - bearerAuth: []
+
+  /payment/{id}:
+    get:
+      tags:
+        - "Payment"
+      summary: Retrieve a specific payment
+      description: Retrieve details of a specific payment by payment ID.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: The ID of the payment to retrieve
+      responses:
+        200:
+          description: Successfully retrieved the payment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DetailPaymentResponse'
+        404:
+          description: Payment not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Order not found"
+      security:
+        - bearerAuth: []
+    
 
 components:
   securitySchemes:
@@ -1601,6 +1718,67 @@ components:
           type: string
           format: date-time
           example: "2024-05-25T14:20:18.724Z"
+
+    PaymentResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        amount:
+          type: string
+          example: "1500000"
+        method_payment:
+          type: string
+          example: "credit_card"
+        createdAt:
+          type: string
+          format: date-time
+          example: "2024-05-25T14:20:18.724Z"
+        order_id:
+          type: integer
+          example: 1
+
+    DetailPaymentResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        amount:
+          type: string
+          example: "1500000"
+        method_payment:
+          type: string
+          example: "credit_card"
+        createdAt:
+          type: string
+          format: date-time
+          example: "2024-05-25T14:20:18.724Z"
+        order_id:
+          type: integer
+          example: 1
+        ordersId:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 1
+            status:
+              type: string
+              example: paid
+            code: 
+              type: string
+              example: muhxV5Li
+            detail_flight_id:
+              type: integer
+              example: 2
+            expired_date:
+              type: string
+              example: 2024-06-03T13:28:14.904Z
+            user_id: 
+              type: integer
+              example: 1
 
     Notification:
       type: object
