--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -1436,7 +1436,7 @@ paths:
       security:
         - bearerAuth: []
 
-  /payment/{PaymentId}:
+  /payment/{paymentId}:
     get:
       tags:
         - "Payment"
