--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ IMAGEKIT_ENDPOINT_URL=""
 
 PAYMENT_DEV_SERVER_KEY=""
 PAYMENT_DEV_CLIENT_KEY=""
+PAYMENT_PROD_SERVER_KEY=""
+PAYMENT_PROD_CLIENT_KEY=""
