--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -753,7 +753,7 @@ paths:
                     items:
                       $ref: "#/components/schemas/BasicFlightInfo"
 
-  /ticket/flight/{flightId}:
+  /ticket/flight/{detailflightId}:
     get:
       tags:
         - "Ticket"
