--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -1428,6 +1428,82 @@ paths:
       security:
         - bearerAuth: []
 
+  /payment/midtrans/{orderId}:
+    post:
+      tags:
+        - "Payment"
+      summary: Create a payment midtrans for an order
+      description: Creates a payment midtrans record for an order and updates the order status to 'PAID'.
+      parameters:
+        - in: path
+          name: orderId
+          required: true
+          schema:
+            type: integer
+          description: The ID of the order for which the payment is being made
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                method_payment:
+                  type: string
+                  example: "credit_card"
+      responses:
+        201:
+          description: Midtrans payment initiated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: Midtrans payment initiated successfully
+                  data:
+                    type: object
+                    properties:
+                      token:
+                        type: string
+                        example: e5457899-d4f1-457b-8a60-cf3ee16f44e1
+                      redirect_url:
+                        type: string
+                        example: https://app.sandbox.midtrans.com/snap/v4/redirection/e5457899-d4f1-457b-8a60-cf3ee16f44e1
+
+        400:
+          description: Bad request, missing or invalid fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Payment method is required"
+        404:
+          description: Order not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Order not found"
+      security:
+        - bearerAuth: []
+
   /payments:
     get:
       tags:
