--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^137.1.0",
     "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
@@ -30,7 +31,6 @@
     "path": "^0.12.7",
     "prisma": "^5.14.0",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.4.2",
-    "midtrans-client": "^1.3.1"
+    "yaml": "^2.4.2"
   }
 }
