--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "midtrans-client": "^1.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "pnpm": "^9.2.0",
     "prisma": "^5.14.0",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.2"
